--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,12 +5,23 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
   </head>
-
   <body>
-    <%= yield %>
-  </body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <%= link_to lists_path, class: "navbar-brand" do %>
+          <span><i class="fa-solid fa-film"></i> My Movie List</span>
+        <% end %>
+        <span class="navbar-text">
+          <%= link_to new_list_path, class:"btn btn-success" do %>
+            <i class="fa-solid fa-plus"></i> Add new list
+          <% end %>
+        </span>
+      </div>
+    </div>
+  </nav>
+  <%= yield %>
+</body>
 </html>
