--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -6,5 +6,5 @@
     <%= f.submit "Add", class: "btn btn-primary" %>
   <% end %>
   <br>
-  <%= link_to "Back", lists_path, class: "btn btn-secondary" %>
+  <%= link_to "Back", list_path(@list), class: "btn btn-secondary" %>
 </div>
