--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <%= link_to lists_path, class: "navbar-brand" do %>
-          <span><i class="fa-solid fa-film"></i> My Movie List</span>
+          <span><i class="fa-solid fa-film"></i> Watch List</span>
         <% end %>
         <span class="navbar-text">
           <%= link_to new_list_path, class:"btn btn-success" do %>
