--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,12 +1,30 @@
 <div class="banner" style="background-image: url('<%= asset_path('cinema.jpg') %>');">
   <div class="container">
-    <h1>My Movie List</h1>
+    <h1>Recommendation</h1>
+    <div class="re-container">
+      <input type="radio" name="position" checked/>
+      <% 2.times do %>
+        <input type="radio" name="position" />
+      <% end %>
+      <main id="carousel">
+        <% @recommend.each do |bookmark| %>
+          <div class="re-item" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= asset_path(bookmark.movie.poster_url) %>');">
+            <p style="text-align: center; color: white"><%= bookmark.movie.title %></p>
+          </div>
+        <% end %>
+        <main>
+        </div>
+      </div>
+    </div>
   </div>
-</div>
-<div class="container mt-3">
-  <% @lists.each do |list| %>
-    <%= link_to list_path(list) do %>
-      <p><%= list.name %></p>
-    <% end %>
-  <% end %>
-</div>
+  <div class="container mt-3">
+    <div class="list-container">
+      <% @lists.each do |list| %>
+        <%= link_to list_path(list) do %>
+          <div class="card">
+            <h3 class="title"><%= list.name %></h3>
+          </div>
+        <% end %>
+      <% end %>
+    </div>
+  </div>
