--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -7,13 +7,19 @@
   <div class="cards">
     <% @list.bookmarks.each do |bookmark| %>
       <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= asset_path(bookmark.movie.poster_url) %>');">
-        <%= bookmark.movie.title %> -
-        <%= bookmark.comment %>
+        <div class="card-title">
+          <%= bookmark.movie.title %> -
+          <%= bookmark.comment %>
+        </div>
         <%= link_to "X",
     bookmark_path(bookmark),
     data: {turbo_method: :delete, turbo_confirm: "Are you sure?"},
     class: "btn btn-danger"
   %>
+        <div class="card-details">
+          <p style="font-size: 12px"><%= bookmark.movie.overview %></p>
+          Rating: <%= bookmark.movie.rating %>
+        </div>
       </div>
     <% end %>
   </div>
