--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -93,6 +93,7 @@ body {
   transition: 0.4s ease-out;
   position: relative;
   left: 0px;
+  background-size: cover;
 }
 
 .card:not(:first-child) {
