--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -21,7 +21,7 @@
     <div class="list-container">
       <% @lists.each do |list| %>
         <%= link_to list_path(list) do %>
-          <div class="card">
+          <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= list.photo.attached? ? cl_image_path(list.photo.key) : 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTPQDYau3Hs4-xw1i8jVSUY4BlF4FLmg8lQqg&usqp=CAU' %>)">
             <h3 class="title"><%= list.name %></h3>
           </div>
         <% end %>
