--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -79,7 +79,9 @@ body {
 }
 
 .list-container {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-gap: 8px;
 }
 
 .card {
@@ -117,4 +119,11 @@ body {
   position: absolute;
   left: 20px;
   top: 15px;
+}
+
+// Smallest device
+@media (min-width: 100px) and (max-width: 575px) {
+  .list-container {
+    grid-template-columns: 1fr 1fr;
+  }
 }
