--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -6,20 +6,20 @@
   </h1>
   <div class="cards">
     <% @list.bookmarks.each do |bookmark| %>
-      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= asset_path(bookmark.movie.poster_url) %>');">
-        <div class="card-title">
-          <%= bookmark.movie.title %> -
-          <%= bookmark.comment %>
+      <div class="movie-card">
+        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= asset_path(bookmark.movie.poster_url) %>');">
+          <div class="card-details">
+            <%= bookmark.movie.title %>
+            <p style="font-size: 12px"><%= bookmark.movie.overview %></p>
+            Rating: <%= bookmark.movie.rating %> <i class="fa-solid fa-star" style="color: yellow"></i>
+          </div>
         </div>
+        <h3>"<%= bookmark.comment %>"</h3>
         <%= link_to "X",
     bookmark_path(bookmark),
     data: {turbo_method: :delete, turbo_confirm: "Are you sure?"},
-    class: "btn btn-danger"
+    class: "btn btn-danger delete-movie"
   %>
-        <div class="card-details">
-          <p style="font-size: 12px"><%= bookmark.movie.overview %></p>
-          Rating: <%= bookmark.movie.rating %>
-        </div>
       </div>
     <% end %>
   </div>
