add new list card

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -121,6 +121,17 @@ body {
   top: 15px;
 }
 
+.title-plus {
+  opacity: 0;
+}
+
+.card-plus:hover {
+  .title-plus {
+    opacity: 1;
+    transition: 0.5s;
+  }
+}
+
 // Smallest device
 @media (min-width: 100px) and (max-width: 575px) {
   .list-container {
