--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container mt-3">
+<div class="container mt-3 mb-3">
   <h1><%= @list.name %>
     <%= link_to new_list_bookmark_path(@list), class:"btn btn-primary" do %>
       <i class="fa-solid fa-plus"></i>
